# ffdas

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.py  index.html  mkdocs.yml  pyproject.toml  release.py  setup.cfg  setup.py  test_release.m  test_release.py
api/: index.html
api/das/: index.html
api/einsum/: index.html
api/greens/: index.html
api/interpolation/: index.html
api/tensor/: index.html
api/truncate_rank/: index.html
api/utilities/: index.html
bindings/matlab/: CMakeLists.txt
bindings/matlab/+ffdas/: das.m  das_sparse.m  eigfilter.m  einsum.m  gather.m  get_cuda_device.m  get_cuda_device_count.m  greens.m  interpolate.m  set_cuda_device.m  truncate_rank.m
bindings/matlab/+ffdas/+core/: Handle.m  astype.m  get_handle.m
bindings/matlab/+ffdas/+core/src/: _ffdas_mex_common.h  _mex_ndarray.h  ffdas_contraction.cpp  ffdas_create.cpp  ffdas_das.cpp  ffdas_das_sparse.cpp  ffdas_destroy.cpp  ffdas_device_count.cpp  ffdas_device_get.cpp  ffdas_device_set.cpp  ffdas_eigfilter.cpp  ffdas_event_create.cpp  ffdas_event_destroy.cpp  ffdas_event_elapsed_time.cpp  ffdas_event_record.cpp  ffdas_event_synchronize.cpp  ffdas_gather.cpp  ffdas_greens.cpp  ffdas_interpolate.cpp  ffdas_truncate_rank.cpp
bindings/matlab/+ffdas/+utils/: Timer.m  angle.m  cdist.m  rect_dist.m  take.m  take_along_axis.m
bindings/matlab/examples/: clutter_filter.m  compound.m  interpolation.m  reconstruct.m  sparse_compounding.m
bindings/matlab/examples/archive/: eigfilter_precision.m  einsum_example.m  ffdas_basics.m  hamming.m  interpolation.m  load_sample_data.m  sparse_reduction.m  test_greens_sum.m  volume_renderer_example.m
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
bindings/python/examples/: README.md  clutter_filter.py  compound.py  eigfilter.py  interpolation.py  reconstruct.py  requirements.txt  simulation.py  sparse_compounding.py
bindings/python/ffdas/: __init__.py  das.py  eigfilter.py  einsum.py  greens.py  interpolation.py  truncate_rank.py
bindings/python/ffdas/_core/: _ffdas.pyi  library.py  tensor.py  tensor_like.py
bindings/python/ffdas/_core/src/: _ffdas.cpp
bindings/python/ffdas/utils/: __init__.py  spatial.py  timing.py
bindings/python/tests/: test_das.py  test_eigfilter.py  test_einsum.py  test_greens.py  test_interpolation.py  test_spatial.py  test_tensor.py  test_timer.py  test_truncate_rank.py  test_types.py
cmake/: ffdasConfig.cmake.in
conventions/: index.html
docs/: conventions.md  how-it-works.md  index.md  performance.md
docs/api/: das.md  eigfilter.md  einsum.md  greens.md  index.md  interpolation.md  tensor.md  truncate_rank.md  utilities.md
docs/getting-started/: installation.md  quickstart.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
how-it-works/: index.html
include/: ffdas.h  ffdas_api.h  ffdas_math.cuh  ffdas_types.h
packaging/core/: README.md  setup.cfg  setup.py
packaging/core/ffdas_core/: __init__.py
performance/: index.html
scripts/: release_linux.sh  release_windows.ps1
search/: search_index.json
src/: context.cu  contiguous_copy.cu  contraction.cu  das.cu  das_sparse.cu  eigfilter.cu  error_utils.cu  gather.cu  greens_sum.cu  interpolation.cu  scatter.cu  spatial_hash.cu  tensor.cu  truncate_rank.cu  type_utils.cu
src/core/: context.cu  error_checking.h  error_utils.cu  tensor.cu  tensor.cuh  type_utils.cu  type_utils.h
src/core/math/: bitops.cuh  core.cuh  magic_division.cuh
src/das/: das.cu  das_alg1.cu  das_alg1.h  das_alg1_kernels.cuh  das_alg2.cu  das_alg2.h  das_alg2_kernels.cuh  das_alg4.cu  das_alg4.h  das_alg4_kernels.cuh  das_common.cuh  das_device_utils.cuh  das_impl.cuh  das_sparse.cu  das_sparse_impl.cuh  das_utils.h
src/greens/: greens.cu  greens_impl.cuh  greens_kernels.cuh  greens_sum.cu
src/include/: context.cuh  contiguous_copy_impl.cuh  contraction_impl.cuh  das_impl.cuh  das_sparse_impl.cuh  eigfilter_impl.cuh  env_utils.h  error_checking.h  gather_impl.cuh  gather_kernels.cuh  greens_kernels.cuh  greens_sum_impl.cuh  interpolation_impl.cuh  scatter_impl.cuh  spatial_hash.cuh  spatial_hash_kernels.cuh  tensor.cuh  truncate_rank_impl.cuh  type_utils.h
src/include/math/: vector.cuh
src/interpolation/: interpolation.cu  interpolation_impl.cuh  interpolation_kernels.cuh
src/tensor_ops/: contiguous_copy.cu  contiguous_copy_impl.cuh  gather_impl.cuh  scatter.cu  scatter_impl.cuh  scatter_kernels.cuh  tensor_copy_kernels.cuh
src/truncate_rank/: truncate_rank_impl.cuh
